k8s/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongodb
        tier: mongoDB
    spec:
      containers:
        - name: mongodb
          image: $CI_REGISTRY_IMAGE/mongo:4.0
          livenessProbe:
            exec:
              command:
                - pgrep
                - mongod
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
          ports:
            - containerPort: 27017
              name: mongodb
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - name: mongodb
              mountPath: /data/db
              subPath: data
          securityContext:
            runAsGroup: 2000
            runAsUser: 2000
            runAsNonRoot: true
      imagePullSecrets:
        - name: registry-gitlab
      volumes:
        - name: mongodb
          persistentVolumeClaim:
            claimName: mongodb-storage
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
    tier: mongoDB
